customers-portal-demo-v2/service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: customers-portal-demo
  labels:
    app: customers-portal-demo
spec:
  selector:
    app: customers-portal-demo
    tier: web
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
  loadBalancerIP: "35.198.249.66"
