customers-portal-demo-v2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customers-portal-demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: customers-portal-demo-ip
  labels:
    app: customers-portal-demo
spec:
  backend:
    serviceName: customers-portal-demo-backend
    servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: customers-portal-demo-backend
  labels:
    app: customers-portal-demo-backend
spec:
  type: NodePort
  selector:
    app: customers-portal-demo-backend
    tier: web
  ports:
    - port: 5000
      targetPort: 5000
